--- a/index.html
+++ b/index.html
@@ -5,10 +5,140 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football-News</title>
+    <!-- font-link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <!-- symble-link -->
+    <script src="https://kit.fontawesome.com/feedc548ca.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
 
+    <section class="container">
+
+        <div class="top-part">
+            <div class="half-width top-font">
+                <h1 class="font-color">Conmebol <br>Cop America<br> 2021</h1>
+                <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=q6R4_XaJ3ZU"> Watch
+                    live <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="half-width">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- top player news -->
+    <section class="top-players">
+        <div class="players">
+            <div class="player">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Naymer jr</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-2.png" alt="">
+                <h3>Lioner Messi</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-3.png" alt="">
+                <h3>Cristiano Ronaldo</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-4.png" alt="">
+                <h3>Paulo Dybala</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-5.png" alt="">
+                <h3>Mesut Ozil</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-6.png" alt="">
+                <h3>Mauro Icardi</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-7.png" alt="">
+                <h3>Di Maria</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-8.png" alt="">
+                <h3>Kylian Mbappe</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-9.png" alt="">
+                <h3>Mohamed Salah</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-10.png" alt="">
+                <h3>Harry Kane</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-11.png" alt="">
+                <h3>Kevin De Bruyne</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+            <div class="player">
+                <img src="images/players/player-12.png" alt="">
+                <h3>philippe coutinho</h3>
+                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                    explicabo porro ullam totam, quaerat vitae.</h6>
+            </div>
+        </div>
+    </section>
+    <!-- bottom-part -->
+    <section>
+        <div class="last-part">
+            <div class="half-width ">
+                <h1>All Highlights<br>Copa America 2021</h1>
+                <h6 class="last-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vitae a numquam
+                    fuga tempora fugiat
+                    rerum hic dignissimos accusantium quos!</h6>
+                <a class="link-button" target="_blank" href="">Watch Now <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="half-width ">
+                <img src="images/match.png" alt="">
+            </div>
+        </div>
+    </section>
+    <footer class="footer-blogs">
+        <div class="footer-blog">
+
+            <div class="footer-img">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="icon-img">
+                <img src="images/Social Icons/Youtube.png" alt="">
+                <img src="images/Social Icons/Twitter.png" alt="">
+                <img src="images/Social Icons/Instagram.png" alt="">
+                <img src="images/Social Icons/Dribbble.png" alt="">
+            </div>
+        </div>
+        <div>
+            <h6 class="footer-font">Copyright &#169; 2022 Football</h6>
+        </div>
+    </footer>
 </body>
 
 </html>
