add-responsive-web

--- a/index.html
+++ b/index.html
@@ -16,112 +16,126 @@
 </head>
 
 <body>
+    <main>
+        <section class="container">
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href=""></a>Home</li>
+                        <li><a href=""></a>From</li>
+                        <li><a href=""></a>About us</li>
+                        <li><a href=""></a>Contact</li>
+                        <li><a href=""></a>Login</li>
+                    </ul>
+                </nav>
+            </header>
 
-    <section class="container">
-
-        <div class="top-part">
-            <div class="half-width top-font">
-                <h1 class="font-color">Conmebol <br>Cop America<br> 2021</h1>
-                <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=q6R4_XaJ3ZU"> Watch
-                    live <i class="fas fa-arrow-right"></i></a>
+            <div class="top-part">
+                <div class="half-width top-font">
+                    <h1 class="font-color">Conmebol <br>Cop America<br> 2021</h1>
+                    <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=q6R4_XaJ3ZU"> Watch
+                        live <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="half-width">
+                    <img src="images/banner.png" alt="">
+                </div>
             </div>
-            <div class="half-width">
-                <img src="images/banner.png" alt="">
+        </section>
+        <!-- top player news -->
+        <section class="top-players">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h3>Naymer jr</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h3>Lioner Messi</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h3>Cristiano Ronaldo</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h3>Paulo Dybala</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h3>Mesut Ozil</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h3>Mauro Icardi</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h3>Di Maria</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h3>Kylian Mbappe</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h3>Mohamed Salah</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h3>Harry Kane</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h3>Kevin De Bruyne</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h3>philippe coutinho</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
+                        explicabo porro ullam totam, quaerat vitae.</h6>
+                </div>
             </div>
-        </div>
-    </section>
-    <!-- top player news -->
-    <section class="top-players">
-        <div class="players">
-            <div class="player">
-                <img src="images/players/player-1.png" alt="">
-                <h3>Naymer jr</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
+        </section>
+        <!-- bottom-part -->
+        <section>
+            <div class="last-part">
+                <div class="half-width ">
+                    <h1>All Highlights<br>Copa America 2021</h1>
+                    <h6 class="last-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur inventore
+                        ipsum animi vero sequi delectus cupiditate, dolores ex harum sint blanditiis non saepe
+                        laboriosam sit possimus, placeat earum error! Dignissimos asperiores cupiditate fuga officia
+                        fugit quo error, quia dolorem sapiente.</h6>
+                    <a class="link-button" target="_blank" href="">Watch Now <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="half-width ">
+                    <img src="images/match.png" alt="">
+                </div>
             </div>
-            <div class="player">
-                <img src="images/players/player-2.png" alt="">
-                <h3>Lioner Messi</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-3.png" alt="">
-                <h3>Cristiano Ronaldo</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-4.png" alt="">
-                <h3>Paulo Dybala</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-5.png" alt="">
-                <h3>Mesut Ozil</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-6.png" alt="">
-                <h3>Mauro Icardi</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-7.png" alt="">
-                <h3>Di Maria</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-8.png" alt="">
-                <h3>Kylian Mbappe</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-9.png" alt="">
-                <h3>Mohamed Salah</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-10.png" alt="">
-                <h3>Harry Kane</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-11.png" alt="">
-                <h3>Kevin De Bruyne</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-            <div class="player">
-                <img src="images/players/player-12.png" alt="">
-                <h3>philippe coutinho</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus a enim excepturi id rerum
-                    explicabo porro ullam totam, quaerat vitae.</h6>
-            </div>
-        </div>
-    </section>
-    <!-- bottom-part -->
-    <section>
-        <div class="last-part">
-            <div class="half-width ">
-                <h1>All Highlights<br>Copa America 2021</h1>
-                <h6 class="last-font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vitae a numquam
-                    fuga tempora fugiat
-                    rerum hic dignissimos accusantium quos!</h6>
-                <a class="link-button" target="_blank" href="">Watch Now <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="half-width ">
-                <img src="images/match.png" alt="">
-            </div>
-        </div>
-    </section>
+        </section>
+    </main>
+    <hr>
     <footer class="footer-blogs">
         <div class="footer-blog">
 
