responsive-web-add

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </section>
         <!-- top player news -->
         <section class="top-players">
+            <h1>Top Player News</h1>
             <div class="players">
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
