--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
                         <li><a href=""></a>Home</li>
                         <li><a href=""></a>From</li>
                         <li><a href=""></a>About us</li>
-                        <li><a href=""></a>Contact</li>
+                        <li><a href=""></a>Contact Us</li>
                         <li><a href=""></a>Login</li>
                     </ul>
                 </nav>
             </header>
+            <!-- -------------------
+            top player live
+        ------------------------- -->
 
             <div class="top-part">
                 <div class="half-width top-font">
@@ -41,7 +44,7 @@
                 </div>
             </div>
         </section>
-        <!-- top player news -->
+        <!-- top player news & img-->
         <section class="top-players">
             <h1>Top Player News</h1>
             <div class="players">
@@ -119,7 +122,9 @@
                 </div>
             </div>
         </section>
-        <!-- bottom-part -->
+        <!-------------------------
+             bottom-live-part
+            --------------------- -->
         <section>
             <div class="last-part">
                 <div class="half-width ">
@@ -144,10 +149,10 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="icon-img">
-                <img src="images/Social Icons/Youtube.png" alt="">
-                <img src="images/Social Icons/Twitter.png" alt="">
-                <img src="images/Social Icons/Instagram.png" alt="">
-                <img src="images/Social Icons/Dribbble.png" alt="">
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
             </div>
         </div>
         <div>
